force-app/main/default/objects/Welfare_Observation__c/Welfare_Observation__c.object-meta.xml
<CustomObject>
    <description
  >Historical evidence line captured as part of a welfare assessment.</description>
    <label>Welfare Observation</label>
    <nameField>
        <label>Welfare Observation Number</label>
        <displayFormat>OBS-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Welfare Observations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>