force-app/main/default/objects/Welfare_Observation__c/fields/Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Level__c</fullName>
    <description>Confidence level for the captured evidence line.</description>
    <label>Confidence Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>A360_Confidence_Level</valueSetName>
    </valueSet>
</CustomField>