force-app/main/default/objects/Welfare_Observation__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description
  >Observed duration of the evidence line where known.</description>
    <label>Duration</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Acute</fullName>
            </value>
            <value>
                <fullName>Short Term</fullName>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>