force-app/main/default/objects/Welfare_Observation__c/fields/Enhancement_Level__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Level__c</fullName>
    <description
  >Enhancement level assigned when positive welfare evidence is present.</description>
    <label>Enhancement Level</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>