force-app/main/default/objects/Welfare_Observation__c/fields/Evidence_Source__c.field-meta.xml
<CustomField>
    <fullName>Evidence_Source__c</fullName>
    <description
  >Source of the evidence captured in the observation.</description>
    <label>Evidence Source</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Direct Observation</fullName>
            </value>
            <value>
                <fullName>Clinical Examination</fullName>
            </value>
            <value>
                <fullName>Carer Report</fullName>
            </value>
            <value>
                <fullName>Historical Record</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>