force-app/main/default/objects/Welfare_Observation__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description
  >Observed frequency of the evidence line where known.</description>
    <label>Frequency</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Occasional</fullName>
            </value>
            <value>
                <fullName>Repeated</fullName>
            </value>
            <value>
                <fullName>Continuous</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>