force-app/main/default/objects/Welfare_Observation__c/fields/Indicator_Key__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Key__c</fullName>
    <description
  >Stable indicator key used to interpret the observation historically.</description>
    <label>Indicator Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>