force-app/main/default/objects/Welfare_Observation__c/fields/Indicator_Label__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Label__c</fullName>
    <description
  >Indicator label captured at the time of observation for direct reporting.</description>
    <label>Indicator Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>