force-app/main/default/objects/Welfare_Observation__c/fields/Intervention_Notes__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Notes__c</fullName>
    <description
  >Narrative intervention notes linked to the observation.</description>
    <label>Intervention Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>