force-app/main/default/objects/Welfare_Observation__c/fields/Observation_Key__c.field-meta.xml
<CustomField>
    <fullName>Observation_Key__c</fullName>
    <description
  >System-maintained unique key that ensures one observation per indicator per assessment.</description>
    <label>Observation Key</label>
    <length>180</length>
    <unique>true</unique>
    <type>Text</type>
</CustomField>