force-app/main/default/objects/Welfare_Observation__c/fields/Observation_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Value_Type__c</fullName>
    <description
  >Explicit value type used by the observation so false booleans remain reportable and valid.</description>
    <label>Observation Value Type</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>