force-app/main/default/objects/Welfare_Observation__c/fields/Observed_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Observed_Boolean__c</fullName>
    <description
  >Boolean observation value when the indicator is boolean-based.</description>
    <label>Observed Boolean</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>