force-app/main/default/objects/Welfare_Observation__c/fields/Observed_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Observed_DateTime__c</fullName>
    <description
  >Observed date/time value when the indicator is datetime-based.</description>
    <label>Observed Date Time</label>
    <type>DateTime</type>
</CustomField>