force-app/main/default/objects/Welfare_Observation__c/fields/Observed_Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Observed_Numeric_Value__c</fullName>
    <description
  >Observed numeric value when the indicator is number-based.</description>
    <label>Observed Numeric Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>