force-app/main/default/objects/Welfare_Observation__c/fields/Observed_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Observed_Picklist_Value__c</fullName>
    <description
  >Observed picklist value when the indicator is picklist-based.</description>
    <label>Observed Picklist Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>