force-app/main/default/objects/Welfare_Observation__c/fields/Observed_Text__c.field-meta.xml
<CustomField>
    <fullName>Observed_Text__c</fullName>
    <description
  >Observed narrative value when the indicator is text-based.</description>
    <label>Observed Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>