force-app/main/default/objects/Welfare_Observation__c/fields/Requires_Intervention__c.field-meta.xml
<CustomField>
    <fullName>Requires_Intervention__c</fullName>
    <description
  >Flags that the observation requires intervention or immediate follow-up.</description>
    <label>Requires Intervention</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>