force-app/main/default/objects/Welfare_Observation__c/fields/Welfare_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Welfare_Assessment__c</fullName>
    <description>Assessment that owns the evidence line.</description>
    <label>Welfare Assessment</label>
    <referenceTo>Welfare_Assessment__c</referenceTo>
    <relationshipLabel>Observations</relationshipLabel>
    <relationshipName>Observations</relationshipName>
    <type>MasterDetail</type>
</CustomField>